2009-11-02  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Replace explicit touch stamps/<file>
	invocations with touch $@.  Reorganise
	aliases alphabetically and add missing ones.
	(stamps/download-openjdk.stamp): Move
	CACAO and VisualVM downloads to separate target.
	(stamps/download-cacao.stamp): New target
	for downloading CACAO.
	(clean-download-cacao): Inverse of download-cacao.
	(stamps/download-visualvm.stamp): New target
	for downloading VisualVM.
	(clean-download-visualvm): Inverse of download-visualvm.
	(stamps/extract-cacao.stamp): Depend on download-cacao.
	(stamps/extract-visualvm.stamp): Depend on download-visualvm.
	(clean-patch-boot): Check that patches have been applied.
	(stamps/pulse-java.stamp): Move native code generation to its
	own target, making this a top-level dependency target.
	(stamps/pulse-java-native-code.stamp): New target for native
	code generation for PulseAudio plugin.
	(clean-pulse-java): Always remove stamps.

2009-11-02  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-local): New target which removes all
	but the downloaded tarballs.
	(distclean-local): Now depends on clean-local,
	and removes the tarballs.
	(stamps/download.stamp): Changed to be a top-level
	target for all downloads.
	(clean-download): Changed to remove all downloads.
	(stamps/download-openjdk.stamp): Renamed from
	stamps/download.stamp.  Downloads OpenJDK tarballs.
	(clean-download-openjdk): Now removes all OpenJDK
	tarballs if not using the alternate zip option.
	(stamps/extract.stamp): Changed to be a top-level
	target for all extraction.
	(clean-extract): Changed to remove all extracted
	directories.
	(stamps/extract-visualvm.stamp): Depend on the tarball
	having being downloaded.
	(clean-extract-visualvm): Renamed from clean-extract-visualvm.stamp
	(stamps/extract-cacao.stamp): Rename dependency to
	match changes above.
	(clean-extract-cacao): Simply depend on clean-cacao and
	remove the stamp.